deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logos
  labels:
    istio-injection: enabled
