deployment/canary-bot.yaml
# Logos 服务金丝雀发布配置
# 使用方式：kubectl apply -f canary-bot.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bot
  namespace: logos
spec:
  hosts:
  - bot-svc
  http:
  - route:
    - destination:
        host: bot-svc
        subset: v1
      weight: 90
    - destination:
        host: bot-svc
        subset: v2
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bot
  namespace: logos
spec:
  host: bot-svc
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
